files, basic algorithm, first test